<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_deck_set">DeckSetActivity</string>

    <!-- activity_main -->
    <string name="app_name">YgoDeck</string>
    <string name="button_user_login">Login</string>
    <string name="button_user_add">Add</string>
    <string name="button_user_remove">Remove</string>
    <string name="action_settings">Settings</string>

    <!-- activity_deck_set -->
    <string name="button_add_deck_set">Add</string>
    <string name="title_activity_deck">DeckActivity</string>

    <!-- activity_deck -->
    <string name="button_add_deck">Add</string>
    <string name="button_remove_deck">Remove</string>
    <string name="button_export_deck">Export</string>
    <string name="title_activity_card_searcher">CardSearcher</string>
    <string name="hello_world">Hello world!</string>

    <!-- activity_card_searcher -->
    <string name="button_search">Search</string>
    <string name="title_activity_card_viewer">CardViewer</string>

</resources>
